compilateurDeca/src/test/deca/codegen/valid/sans_objet/control/ifelse_float.deca
// Description:
//    Fonction par morceaux (float) + if/else
//
// Resultats:
//    6.25000e+00
{
    float x = 2.5;
    float y;

    if (x < 0.0) {
        y = -x;
    } else {
        y = x*x;
    }
    println(y);
}
